# Typinterm

./: #CMakeLists.txt#  .#CMakeLists.txt  20250615_140926.txt  20250615_142654.txt  20250615_144647.txt  20250615_145352.txt  20250615_160409.txt  20250615_161221.txt  20250615_162149.txt  20250615_163324.txt  20250615_164411.txt  20250615_223100.txt  20250619_215627.txt  20250619_220210.txt  20250702_221638.txt  CMakeLists.txt  README.md  a.out
.cache/clangd/index/: exerciseMaterial_test.cpp.37FB18E482CE91A7.idx  filereader.cpp.6E18609C2CC49680.idx  filereader.hpp.9F3A0B6531E7FA42.idx  input.cpp.DB67F3E5B1DB07F0.idx  input.hpp.509CF79C40D8FAA3.idx  key_event.hpp.3B9052E0354EF9BD.idx  key_event_pool.hpp.D67B89E2B2C93E60.idx  llm_exerciseMaterial.cpp.458156B5B81ED756.idx  llm_exerciseMaterial.hpp.46BBF1469AC4907E.idx  llm_infobody.hpp.5EEFB5BE0A8CA6F2.idx  main.cpp.9E978A567661069C.idx  renderer.cpp.E874F17A7D4232E3.idx  renderer.hpp.6886269FF8CD7791.idx  renderer_test.cpp.40F215A7B99A7403.idx  savematerial.cpp.B4645242D60FC6B4.idx  savematerial.hpp.110B3C1C70D97A48.idx  session.cpp.054A06EDFEFD0ED8.idx  session.hpp.AEA8C313CA7F8CED.idx  session_test.cpp.5400A7A616A80361.idx  terminal.hpp.2DE0C28ED9A42D3E.idx
src/: #main.cpp#  #savematerial.cpp#  Contents.cpp  Inputs.cpp  Inputs_test.cpp  Inputs_test_001.cpp  Timer.cpp  filereader.cpp  filereader.hpp  input.cpp  input.hpp  key_event.hpp  key_event_pool.hpp  llm_exerciseMaterial.cpp  llm_exerciseMaterial.hpp  llm_infobody.hpp  main.cpp  renderer.cpp  renderer.hpp  savematerial.hpp  session.cpp  session.hpp  terminal.hpp  timer_and_getchar.cpp
temp_working/: Inputs.cpp  Inputs_test_001.cpp  Timer.cpp  input.cpp  key_event.hpp  main.cpp  session.cpp  session.hpp  terminal.hpp
tests/: exerciseMaterial_test.cpp  renderer_test.cpp  session_test.cpp
